--- a/MangoMovie/Views/Web.config
+++ b/MangoMovie/Views/Web.config
@@ -24,6 +24,7 @@
 
   <appSettings>
     <add key="webpages:Enabled" value="false" />
+    <add key="WebApiHost" value="localhost:44353" />
   </appSettings>
 
   <system.webServer>
