--- a/MyWebAPI/MyWebAPI.csproj
+++ b/MyWebAPI/MyWebAPI.csproj
@@ -18,7 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\CommonMethod.csproj" />
+    <ProjectReference Include="..\CommFunc\CommFunc.csproj" />
+    <ProjectReference Include="..\HttpHellper\HttpHellper.csproj" />
   </ItemGroup>
 
 </Project>
